--- a/src/components/partials/components/RightSide/components/Header/components/styles.css
+++ b/src/components/partials/components/RightSide/components/Header/components/styles.css
@@ -1,20 +1,34 @@
 .top-header-outer {
   display: flex;
+  border-top: 2px solid white;
 }
 .top-header-tabs {
   border-left: 1px solid gray;
   border-right: 1px solid gray;
-  border-top: 2px solid white;
-  width: 150px;
-  margin-right: 2px;
+  width: 200px;
   padding: 2px;
+  cursor: pointer;
+}
+.active-tab {
+  border-top: 4px solid white;
 }
 .top-header-name {
   display: inline-flex;
   padding: 3px;
-  /* text-overflow: ellipsis; */
-  /* width: 100px; */
+}
+.api-title-bar {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 145px;
+  overflow: hidden;
+  margin-left: 10px;
+  font-weight: bold;
 }
 .close-current-tab {
   cursor: pointer;
+  font-size: 25px;
+}
+
+.close-tab-icon {
+  pointer-events: none;
 }
