--- a/src/components/partials/components/RightSide/components/Header/components/styles.css
+++ b/src/components/partials/components/RightSide/components/Header/components/styles.css
@@ -41,4 +41,8 @@
 .api-header-main{
   border-top: 2px solid white;
   border-bottom: 1px solid black;
+  padding: 2px;
+}
+.api-header-input{
+  border: 1px solid gray !important;
 }
